force-app/main/default/objects/Lessons_Learned__c/Lessons_Learned__c.object-meta.xml
<CustomObject>
    <label>Postmortem</label>
    <nameField>
        <displayFormat>LL-{0000}</displayFormat>
        <label>PM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Postmortem Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>