force-app/main/default/objects/Lessons_Learned__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Postmortem Summary</relationshipLabel>
    <relationshipName>Postmortem_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>