force-app/main/default/objects/Lessons_Learned__c/fields/closeTask__c.field-meta.xml
<CustomField>
    <fullName>closeTask__c</fullName>
    <label>closeTask</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>