force-app/main/default/objects/Lessons_Learned__c/fields/Completed_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Action_Items__c</fullName>
    <formula>eventClose__c + closeTask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Action Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>