force-app/main/default/objects/Lessons_Learned__c/fields/eventClose__c.field-meta.xml
<CustomField>
    <fullName>eventClose__c</fullName>
    <label>eventClose</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>