force-app/main/default/objects/Lessons_Learned__c/fields/eventOpen__c.field-meta.xml
<CustomField>
    <fullName>eventOpen__c</fullName>
    <label>eventOpen</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>