force-app/main/default/objects/Lessons_Learned__c/fields/Open_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Open_Action_Items__c</fullName>
    <formula>eventOpen__c + OpenTask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Action Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>