force-app/main/default/objects/Lessons_Learned__c/fields/OpenTask__c.field-meta.xml
<CustomField>
    <fullName>OpenTask__c</fullName>
    <label>OpenTask</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>