force-app/main/default/objects/Lessons_Learned__c/fields/Total_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Action_Items__c</fullName>
    <formula>Completed_Action_Items__c + Open_Action_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Action Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>